public-api/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: public-api
  namespace: public-stage
  annotations:
    #kubernetes.io/ingress.global-static-ip-name: "api-static-ip"
    #networking.gke.io/managed-certificates: managed-cert
    #kubernetes.io/ingress.class: "gce"
    #kubernetes.io/ingress.allow-http: "false"
    #networking.gke.io/v1beta1.FrontendConfig: lb-http-to-https

spec:
  rules:
  - host: cachac6c.kubelabs.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-public-api
            port:
              number: 3000
      - path: /graphql
        pathType: Prefix
        backend:
          service:
            name: svc-public-api
            port:
              number: 3000
